--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <title>SchoolManagement</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/ed818b8d03.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <sman-root></sman-root>
 </body>
 </html>
